# perspective

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/ISSUE_TEMPLATE/: Bug_report.md
.github/workflows/: build.yaml  build.yml
cmake/: rapidjson.txt.in
docs/: book.toml  build.js  docusaurus.config.js  package.json  template.html
docs/md/: perspective.js
docs/static/: CNAME
examples/blocks/: README.md  examples.js  package.json  server.mjs
examples/esbuild-example/: package.json
examples/esbuild-remote/: package.json
examples/python-aiohttp/: package.json
examples/python-starlette/: package.json
examples/python-tornado/: README.md  client_server_editing.html  index.html  package.json  server_mode.html
examples/python-tornado-streaming/: index.html  package.json
examples/react-example/: package.json
examples/rust-axum/: Cargo.toml  package.json
examples/vite-example/: package.json
examples/webpack-example/: package.json
python/perspective/: pyproject.toml  tmp.py  tmp2.py
python/perspective/bench/runtime/: perspective_benchmark.py  run_perspective_benchmark.py
rust/generate-metadata/: package.json
rust/lint/: Cargo.toml
rust/metadata/: Cargo.toml  main.rs  package.json
rust/perspective/: Cargo.toml  build.mjs  package.json
rust/perspective-client/: Cargo.toml  package.json
rust/perspective-js/: Cargo.toml  build.mjs  package.json
rust/perspective-python/: Cargo.toml  build.mjs  package.json  pyproject.toml  test.mjs
rust/perspective-server/: Cargo.toml  build.mjs  build.rs  package.json
rust/perspective-viewer/: Cargo.toml  build.mjs  package.json
scripts/: _wheel_python.js
tools/bench/: basic_suite.mjs  package.json  perspective-bench  puppeteer_suite.mjs  python_suite.mjs  remote_suite.js
(+234 files in other folders)
