#  ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
#  ┃ ██████ ██████ ██████       █      █      █      █      █ █▄  ▀███ █       ┃
#  ┃ ▄▄▄▄▄█ █▄▄▄▄▄ ▄▄▄▄▄█  ▀▀▀▀▀█▀▀▀▀▀ █ ▀▀▀▀▀█ ████████▌▐███ ███▄  ▀█ █ ▀▀▀▀▀ ┃
#  ┃ █▀▀▀▀▀ █▀▀▀▀▀ █▀██▀▀ ▄▄▄▄▄ █ ▄▄▄▄▄█ ▄▄▄▄▄█ ████████▌▐███ █████▄   █ ▄▄▄▄▄ ┃
#  ┃ █      ██████ █  ▀█▄       █ ██████      █      ███▌▐███ ███████▄ █       ┃
#  ┣━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┫
#  ┃ Copyright (c) 2017, the Perspective Authors.                              ┃
#  ┃ ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌ ┃
#  ┃ This file is part of the Perspective library, distributed under the terms ┃
#  ┃ of the [Apache License 2.0](https://www.apache.org/licenses/LICENSE-2.0). ┃
#  ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛

[build-system]
requires = [
    "setuptools",
    "wheel",
    "numpy>=1.13.1,<2",
    "jupyter-packaging==0.12.3",
]
build-backend = "jupyter_packaging.build_api"

[tool.black]
line-length = 200
target-version = ['py37', 'py38']
include = '\.pyi?$'

[tool.cibuildwheel]
build = "cp37-* cp38-* cp39-* cp310-* cp311-*"
test-command = "echo 'TODO'"
test-requires = []

[tool.cibuildwheel.linux]
before-all = ""
environment = {PSP_MANYLINUX="On"}
skip = "*i686 musllinux*"
# CIBW_ENVIRONMENT_LINUX: CCACHE_DIR=/host/home/runner/work/perspective/perspective/.ccache

[tool.cibuildwheel.macos]
before-all = ""
archs = "x84_64"  # TODO add arm
#  CIBW_ENVIRONMENT_MACOS: CCACHE_DIR=/Users/runner/work/csp/csp/.ccache

[tool.cibuildwheel.windows]
archs = "AMD64"
skip = "*win32 *arm_64"

[tool.pytest.ini_options]
asyncio_mode = 'strict'
testpaths = 'perspective/tests'
